--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
     "cSpell.words": [
         "adibarra",
+        "Ayyagari",
+        "Ibarra",
+        "Srujana",
+        "Sunaina",
         "supabase",
-        "taze"
+        "taze",
+        "wireframes",
+        "Wowo"
     ]
 }
