--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
+    "motion": "^12.4.7",
     "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
