--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "harmonic-link",
+  "type": "module",
   "private": true,
   "packageManager": "pnpm@10.2.0",
   "description": "",
@@ -23,9 +24,11 @@
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0"
