--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
