add cSpell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
-        "adibarra",
-        "supabase",
-        "taze"
+      "adibarra",
+      "Srujana",
+      "Sunaina",
+      "supabase",
+      "taze"
     ]
 }
