--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "harmonic-link",
-  "private": true,
-  "packageManager": "pnpm@10.2.0",
-  "description": "",
-  "contributors": [
-    "adibarra <github@adibarra.com> (https://adibarra.com)"
-  ],
-  "scripts": {
-    "build": "next build",
-    "clean": "rm -rf .next/ .pnpm-store/ node_modules/",
-    "dev": "next dev --port 3333",
-    "start": "next start",
-    "taze": "taze -I"
-  },
-  "dependencies": {
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
-    "autoprefixer": "10.4.20",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.468.0",
-    "motion": "^12.4.7",
-    "next": "latest",
-    "next-themes": "^0.4.3",
-    "prettier": "^3.3.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-spinners": "^0.15.0"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.17.16",
-    "@types/node": "22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "19.0.2",
-    "postcss": "8.4.49",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "taze": "^18.3.1",
-    "typescript": "5.7.2"
-  }
+	"name": "harmonic-link",
+	"private": true,
+	"packageManager": "pnpm@10.2.0",
+	"description": "",
+	"contributors": [
+		"adibarra <github@adibarra.com> (https://adibarra.com)"
+	],
+	"scripts": {
+		"build": "next build",
+		"clean": "rm -rf .next/ .pnpm-store/ node_modules/",
+		"dev": "next dev --port 3333",
+		"start": "next start",
+		"taze": "taze -I"
+	},
+	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@supabase/ssr": "latest",
+		"@supabase/supabase-js": "latest",
+		"autoprefixer": "10.4.20",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"lodash": "^4.17.21",
+		"lucide-react": "^0.468.0",
+		"motion": "^12.4.7",
+		"next": "latest",
+		"next-themes": "^0.4.3",
+		"prettier": "^3.3.3",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-spinners": "^0.15.0",
+		"react-use": "^17.6.0"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.17.16",
+		"@types/node": "22.10.2",
+		"@types/react": "^19.0.2",
+		"@types/react-dom": "19.0.2",
+		"postcss": "8.4.49",
+		"tailwind-merge": "^2.5.2",
+		"tailwindcss": "3.4.17",
+		"tailwindcss-animate": "^1.0.7",
+		"taze": "^18.3.1",
+		"typescript": "5.7.2"
+	}
 }
