--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
@@ -34,7 +35,8 @@
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
