--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-spinners": "^0.15.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
