implement results search bar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,14 @@
 {
-    "cSpell.words": [
-      "adibarra",
-      "Srujana",
-      "Sunaina",
-        "Ayyagari",
-        "Ibarra",
-        "Srujana",
-        "Sunaina",
-      "supabase",
-      "taze",
-        "wireframes",
-        "Wowo"
-    ]
+  "cSpell.words": [
+    "adibarra",
+    "Ayyagari",
+    "fuzzysort",
+    "Ibarra",
+    "Srujana",
+    "Sunaina",
+    "supabase",
+    "taze",
+    "wireframes",
+    "Wowo"
+  ]
 }
