add missing dependencies

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "framer-motion": "^12.6.3",
     "fuzzysort": "^3.1.0",
     "lodash": "^4.17.21",
