--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "motion": "^12.7.4",
-    "next": "latest",
+    "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "prettier": "^3.5.3",
